@@ -19,7 +19,7 @@ $env:PATH = "$PWD\.tools\apache-maven-3.9.8\bin;$env:PATH"
 
 Verify with `mvn -version`.
 
-Note: `.mvn/jvm.config` includes `--enable-native-access=ALL-UNNAMED` to suppress Java 22+ warnings from Maven's internal libraries. Remaining guava/sisu warnings are harmless and will be resolved in Maven 4.0.
+Note: `.mvn/jvm.config` includes `--add-opens` to suppress Maven reflection warnings. On Java 22+, additional harmless warnings from Maven's jansi/guava/sisu libraries may appear — these will be resolved in Maven 4.0.
 
 When running Maven in PowerShell, pipe through `Out-Host` to avoid stderr warnings showing as red errors:
 
